--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,12 @@
     transform: rotate(360deg);
   }
 }
+.user_avatar{
+max-width:80px
+}
+.login_dropdown.dropdown button {
+  width: 100%;
+  background: transparent;
+  border: 1px solid #000;
+  color: #000;
+}
