--- a/src/App.css
+++ b/src/App.css
@@ -52,9 +52,9 @@ LeaderBoard
 .user_cards.question{
 justify-content: space-around;
 }
-.user_avatar,.user_details {
-  border-right: 1px solid #f1b7ed;
-  padding: 10px;
+.user_avatar, .user_details {
+  border-right: 2px solid #f1b7ed;
+  padding: 30px 1px 20px;
 }
 .user_avatar img {
   max-width: 100px;
@@ -104,8 +104,16 @@ svg.leader_board--icon {
 }
 .question {
   width: 91%;
-  margin-left: 20px;
+  padding-left: 20px;
 }
 .poll_button{
   width:100%;
 }
+.author {
+  background: #555;
+  color: #fff;
+  padding: 5px;
+  text-align: center;
+  position: absolute;
+  left: 0;
+  top: 0;}
