--- a/src/App.css
+++ b/src/App.css
@@ -117,3 +117,13 @@ svg.leader_board--icon {
   position: absolute;
   left: 0;
   top: 0;}
+  .progress {
+    display: flex;
+    height: 2rem;
+    overflow: hidden;
+    line-height: 3;
+    font-size: .75rem;
+    background-color: #e9ecef;
+    border-radius: .25rem;
+    
+}
