--- a/src/App.css
+++ b/src/App.css
@@ -154,7 +154,7 @@ svg.leader_board--icon {
   background: #f1b7ed;
   border-color: #f1b7ed;
   margin-top: 10%!important;
-  margin-right: 25px;
+  margin-left: 25px;
 }
 .signed_user.navbar-nav {
   width: 25%;
